# backend_vk_service

backend/: .env  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
backend/app/: __main__.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: admins.py  bots.py  payok.py  statistics.py  tasks.py  users.py
backend/app/core/: config.py
backend/app/core/scheduler/: worker.py
backend/app/core/scheduler/tasks/: group.py  income.py  task.py
backend/app/core/vk_api/: __init__.py  api.py  exceptions.py  utils.py
backend/app/db/: __init__.py  base.py  database.py
backend/app/models/: __init__.py  base.py  bot.py  group.py  task.py  user.py
backend/app/schemas/: __init__.py  bot.py  group.py  statistics.py  task.py  user.py
backend/app/use_cases/: __init__.py  base.py  bot.py  group.py  task.py  user.py
backend/docker/app/: Dockerfile
backend/docker/arq/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 6db9b26d4d5a_.py
